--- a/catagory.html
+++ b/catagory.html
@@ -16,6 +16,7 @@
         </header>
         <br>
        <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+       <center>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4">
@@ -140,7 +141,7 @@
               </div>
         </div>
                 </div>
-            </div>
+            </div></center>
             <br>
             <hr style="height:2px;border-width:0;color:gray;background-color:gray">
             <footer class="bottom">
