--- a/catagory.html
+++ b/catagory.html
@@ -17,34 +17,34 @@
         <br>
        <hr style="height:2px;border-width:0;color:gray;background-color:gray">
        <center>
+         <main>
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-md-4">
+                    <div class="my-3">
                         <div class="card shadow" style="width: 18rem;">
                           <div class="inner">
                             <img src="images/noodles-4851996_1920.jpg" class="card-img-top" alt="...">
                           </div>
                            <div class="card-body">
                               <h5 class="card-title"><center><font size="20" face="forte">Maggie</font></center></h5>
-                              <p class="card-text"><font face="MV Boli">Peace will come to the world when the people have enough noodles to eat....</font></p>
+                              <p class="card-text">Peace will come to the world when the people have enough noodles to eat....</p>
                               <a href="index.html#c3" class="btn btn-danger"><i>View Menu . . .</i></a>
                             </div>
                           </div>
                     </div>
-                    
-                    <div class="col-md-4">
+                    <div class="my-3">
                         <div class="card shadow" style="width: 18rem;">
                           <div class="inner">
                             <img src="images/sandwich-2301387_1920.jpg" class="card-img-top" alt="...">
                           </div>
                             <div class="card-body">
                               <h5 class="card-title"><center><font size="20" face="forte">Sandwich</font></center></h5>
-                              <p class="card-text"><font face="MV Boli">You can make any meal into a sandwich, and any sandwich into a meal...</font></p>
+                              <p class="card-text"><font face="MV Boli">You can make any meal into a sandwich, and any sandwich into a meal...<br></font></p>
                               <a href="index.html#c4" class="btn btn-danger"><i>View Menu . . .</i></a>
                             </div>
                           </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="my-3">
                         <div class="card shadow" style="width: 18rem;">
                           <div class="inner">
                             <img src="images/teapots-1858601_1920.jpg" class="card-img-top" alt="...">
@@ -56,7 +56,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="my-3">
                         <div class="card shadow" style="width: 18rem;">
                           <div class="inner">
                             <img src="images/meal-5589923_1920.jpg" class="card-img-top" alt="...">
@@ -68,7 +68,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="my-3">
                       <div class="card shadow" style="width: 18rem;">
                         <div class="inner">
                           <img src="images/pizza-3007395_1920.jpg" class="card-img-top" alt="...">
@@ -80,7 +80,7 @@
                           </div>
                         </div>
                   </div>
-                  <div class="col-md-4">
+                  <div class="my-3">
                     <div class="card shadow" style="width: 18rem;">
                       <div class="inner">
                         <img src="images/abstract-1238247_1920.jpg" class="card-img-top" alt="...">
@@ -92,7 +92,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4">
+                <div class="my-3">
                   <div class="card shadow" style="width: 18rem;">
                     <div class="inner">
                       <img src="images/combo.jpg" class="card-img-top" alt="...">
@@ -104,7 +104,7 @@
                       </div>
                     </div>
               </div>
-              <div class="col-md-4">
+              <div class="my-3">
                 <div class="card shadow" style="width: 18rem;">
                   <div class="inner">
                     <img src="images/iced-coffee-2305203_1920.jpg" class="card-img-top" alt="...">
@@ -116,7 +116,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-md-4">
+            <div class="my-3">
               <div class="card shadow" style="width: 18rem;">
                 <div class="inner">
                   <img src="images/food-photography-2924407_1920.jpg" class="card-img-top" alt="...">
@@ -128,7 +128,7 @@
                   </div>
                 </div>
           </div>
-          <div class="col-md-4">
+          <div class="my-3">
             <div class="card shadow" style="width: 18rem;">
               <div class="inner">
                 <img src="images/drinks-2561091_1920.jpg" class="card-img-top" alt="...">
@@ -141,12 +141,14 @@
               </div>
         </div>
                 </div>
-            </div></center>
+            </div>
+          </main>
+          </center>
             <br>
             <hr style="height:2px;border-width:0;color:gray;background-color:gray">
             <footer class="bottom">
-              <img class="logo" src="images/T&T LOGO.jpg" alt="Logo"width="150" height="150" style="vertical-align:auto" align="right">
-              <h1><font face="ROG FONTS" size="50">Try and Trust</font></h1>
+              <h1><font face="ROG FONTS" size="50">Try and Trust</font></h1><br>
+             <a href="https://instagram.com/cafe_try_and_trust?igshid=1x90lb6p8qy37"> <img src="images/iconfinder_social-instagram-new-circle_1164349.png" class="insta1" alt="insta1"></a>
             </footer>
         </body>
 </html> 
