--- a/catagory.html
+++ b/catagory.html
@@ -147,8 +147,10 @@
             <br>
             <hr style="height:2px;border-width:0;color:gray;background-color:gray">
             <footer class="bottom">
-              <h1><font face="ROG FONTS" size="50">Try and Trust</font></h1><br>
-             <a href="https://instagram.com/cafe_try_and_trust?igshid=1x90lb6p8qy37"> <img src="images/iconfinder_social-instagram-new-circle_1164349.png" class="insta1" alt="insta1"></a>
+             <center> <h2><img class="logo" src="images/T&T LOGO.jpg" alt="Logo"width="60" height="60" style="vertical-align:auto" > <font face="ROG FONTS" >Try and Trust</font></h2>
+              <img src="images/PngItem_5125831.png" width="30" height="30" style="vertical-align:auto"><font color="gray"> : Vishrambag Chowk, Bellow HDFC bank,Sangli </font>
+              <br>
+             <a href="https://instagram.com/cafe_try_and_trust?igshid=1x90lb6p8qy37" class="link"> <img src="images/instagram.png"  width="30" height="30" style="vertical-align:auto"></a><font color="gray"> : Follow us on Instagram </font></center>
             </footer>
         </body>
 </html> 
